crates/check_cli/tests/snapshots/main_commands_check/print_verbose_write.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `check.js`

```js
for (; true; );

```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while applying fixes.
  


```

# Emitted Messages

```block
check.js:1:6 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unexpected constant condition.
  
  > 1 │ for(;true;);
      │      ^^^^
    2 │ 
  

```

```block
 VERBOSE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Files processed:
  
  - check.js
  

```

```block
 VERBOSE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Files fixed:
  
  - check.js
  

```

```block
Scanned project folder in <TIME>.
Checked 1 file in <TIME>. Fixed 1 file.
Found 1 error.
```
