crates/check_cli/tests/snapshots/main_commands_check/should_show_formatter_diagnostics_for_files_ignored_by_linter.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `check.json`

```json
{
  "$schema": "https://checkjs.dev/schemas/1.6.1/schema.json",
  "assist": {
    "enabled": true
  },
  "linter": {
    "enabled": true,
    "includes": ["**", "!build/**"],
    "rules": {
      "recommended": true
    }
  }
}
```

## `build/file.js`

```js

	value['optimizelyService'] = optimizelyService;
		
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
build/file.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1   │ - 
    2   │ - → value['optimizelyService']·=·optimizelyService;
    3   │ - → → 
      1 │ + value["optimizelyService"]·=·optimizelyService;
      2 │ + 
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
